hopefully fix horizontal scroll issue

--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,8 @@ form {
 }
 
 input[type="text"], input[type="password"], textarea {
-  width: 100%;
+  box-sizing: border-box;
+  width: calc(100% - 16px);
   padding: 8px;
   margin-bottom: 10px;
 }
